[FIX] Fixes overflowing big tables and overflowing of elements on homepage (due a definition of height inside main content).

--- a/src/assets/toolkit/styles/6-components/_components.highlights.scss
+++ b/src/assets/toolkit/styles/6-components/_components.highlights.scss
@@ -15,12 +15,7 @@
         }
       }
 
-      /** Highlight types */
-      &.primary {
-        background: #f4f4e9; //TODO: Update the colour!
-      }
-
-      &.secondary {
-        // Add secondary highlights
-      }
+      // Types of highlights
+      &.primary { background-color: $yellow-spring-wood; }
+      &.secondary { background-color: $grey-gallery; }
   }
